@@ -10,6 +10,7 @@
 
 
 Version 4.2.0
+ - Fixed: [ 2477484 ] [4593] Research Assistant - Mc to MAC (fisharebest)
  - Fixed: [ 2475261 ] client.php?action=getxref&position=all fails (fisharebest)
  - Fixed: [ 2474873 ] User Journal entry gets added as GEDCOM News article (canajun2eh)
  - Changed: Removed "Skip Cleanup" button on Upload GEDCOM page (canajun2eh)
